# feather

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
crates/feather-cli/: Cargo.toml
crates/feather-lite/: Cargo.toml
crates/feather-lite/src/: assembly.rs  asset.rs  atomic_write.rs  batch.rs  cache.rs  cache_dump.rs  capabilities.rs  contracts.rs  diagnostics.rs  document.rs  importer.rs  inspect.rs  jobs.rs  json.rs  lib.rs  pipeline.rs  probe.rs
crates/feather-lite/src/assets/: embedded.rs  glb.rs  mod.rs  obj.rs  ole.rs  stl.rs  three_dxml_rep.rs  zip.rs
crates/feather-lite/src/export/: glb.rs  metadata.rs  mod.rs
crates/feather-lite/src/importers/: catia.rs  feather_cache.rs  glb.rs  mod.rs  nx.rs  obj.rs  private_cad.rs  solidworks.rs  step.rs  step_assembly.rs  step_brep.rs  step_part21.rs  step_style.rs  step_tessellated.rs  step_units.rs  stl.rs  three_dxml.rs
crates/feather-lite/src/mesh/: clean.rs  mod.rs  simplify.rs  validate.rs
crates/feather-lite/tests/: asset.rs  batch.rs  cache_dump.rs  capabilities.rs  contracts.rs  conversion.rs  jobs.rs
docs/: compatibility.md  json_contracts.md
tests/fixtures/: sample_ap214_brep_assembly.step  sample_ap214_closed_circle_brep.step  sample_ap214_closed_ellipse_brep.step  sample_ap214_conical_brep.step  sample_ap214_conical_bspline_brep.step  sample_ap214_conical_hole_brep.step  sample_ap214_cylindrical_brep.step  sample_ap214_cylindrical_bspline_brep.step  sample_ap214_cylindrical_hole_brep.step  sample_ap214_cylindrical_seam_hole_brep.step  sample_ap214_planar_brep.step  (+20 more)
(+2 files in other folders)
