[package]
name = "feather-lite"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "feather_lite"
path = "src/lib.rs"

[dependencies]
earcutr = "0.5.0"
miniz_oxide = "0.8.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
