[package]
name = "feather-lite"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "feather_lite"
path = "src/lib.rs"

[dependencies]
earcutr = "0.5.0"
meshopt = "=0.6.2"
miniz_oxide = "0.8.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
